package br.unitins.topicos1.dto;

public record ItemCompraDTO (
    int quant,
    Long idProduto
) {
    
}
